--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^7.0.1"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^7.0.1",
+    "rehype-highlight": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
