--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            rm -rf portfolio
+            git clone https://github.com/jbj338033/portfolio.git
             cd portfolio
-            rm -rf dist
-            git pull origin main
-            npm i
+            npm install
             npm run build
