--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            rm -rf portfolio
+            sudo rm -rf portfolio
             git clone https://github.com/jbj338033/portfolio.git
             cd portfolio
             npm install
