--- a/.github/workflows/retro.yml
+++ b/.github/workflows/retro.yml
@@ -19,7 +19,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             sudo rm -rf retro
-            git clone https://github.com/jbj338033/retro.git -b retro retro
+            git clone https://github.com/jbj338033/portfolio.git -b retro retro
             cd retro
             npm install
             npm run build
