--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: "16" # 필요한 Node.js 버전으로 변경
 
       - name: Install dependencies
         run: npm install
@@ -22,13 +22,13 @@ jobs:
         run: npm run build
 
       - name: Archive build files
-        run: tar -czf build.tar.gz build
+        run: tar -czf dist.tar.gz dist
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
-          path: build.tar.gz
+          path: dist.tar.gz
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
           name: build-artifact
 
       - name: Extract artifact
-        run: tar -xzf build.tar.gz
+        run: tar -xzf dist.tar.gz
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
@@ -49,6 +49,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            rm -rf /var/www/portfolio/build
-            mkdir -p /var/www/portfolio
-            tar -xzf build.tar.gz -C /var/www/portfolio
+            rm -rf ./portfolio/dist
+            mkdir -p ./portfolio
+            tar -xzf dist.tar.gz -C ./portfolio
