--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20" # 필요한 Node.js 버전으로 변경
+          node-version: "20"
 
       - name: Install dependencies
         run: npm install
@@ -39,8 +39,11 @@ jobs:
         with:
           name: build-artifact
 
+      - name: Check downloaded files
+        run: ls -al # 다운로드된 파일 확인
+
       - name: Extract artifact
-        run: tar -xzf dist.tar.gz
+        run: tar -xzf dist.tar.gz -C ./ # 정확한 경로 지정
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
