--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-artifact
-          path: dist.tar.gz
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,7 +52,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            pwd
+            ls -al ${{ github.workspace }}
+            ls -al ${{ github.workspace }}/portfolio
             rm -rf ./portfolio/dist
             mkdir -p ./portfolio
-            scp ${{ github.workspace }}/portfolio/dist.tar.gz ./portfolio/
-            tar -xzf ./portfolio/dist.tar.gz -C ./portfolio/
