--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,29 @@
 name: Deploy
+
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Build the project
+      - name: Build project
         run: npm run build
-
-      - name: Archive build files
-        run: tar -czf dist.tar.gz dist
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifact
-          path: dist
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: build-artifact
-
-      - name: Check downloaded files
-        run: ls -al # 다운로드된 파일 확인
-
-      - name: Extract artifact
-        run: tar -xzf ${{ github.workspace }}/dist.tar.gz -C ${{ github.workspace }}/
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
@@ -52,8 +32,15 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            pwd
-            ls -al ${{ github.workspace }}
-            ls -al ${{ github.workspace }}/portfolio
-            rm -rf ./portfolio/dist
-            mkdir -p ./portfolio
+            cd ~/portfolio
+            rm -rf dist
+            mkdir -p dist
+
+      - name: Copy build files
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          source: ./dist/*
+          target: ~/portfolio/dist
