--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,6 @@ jobs:
           script: |
             cd ~/portfolio
             rm -rf dist
-            mkdir -p dist
 
       - name: Copy build files
         uses: appleboy/scp-action@master
@@ -42,4 +41,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           source: ./dist/*
-          target: ~/dist
+          target: ~/portfolio/dist
+          strip_components: 1
