--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ~/portfolio
             rm -rf dist
 
       - name: Copy build files
@@ -41,5 +40,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           source: ./dist/*
-          target: ~/portfolio/dist
+          target: ~/dist
           strip_components: 1
