--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.2",
     "react-syntax-highlighter": "^15.6.1",
+    "react-virtuoso": "^4.12.3",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
